--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "bugs": {
         "url": "https://github.com/MonoKelvin/Aproch/issues"
     },
-    "homepage": "https://github.com/MonoKelvin/Aproch#readme"
+    "homepage": "https://github.com/MonoKelvin/Aproch#readme",
+    "devDependencies": {
+        "@types/jquery": "^3.3.38"
+    }
 }
