--- a/Widgets/Widgets.vcxproj
+++ b/Widgets/Widgets.vcxproj
@@ -100,6 +100,7 @@
     </QtMoc>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="WidgetsGlobal.h" />
     <QtMoc Include="AToolBar.h" />
     <QtMoc Include="AMenuBar.h" />
     <QtMoc Include="AAction.h" />
