--- a/Widgets/Widgets.vcxproj.filters
+++ b/Widgets/Widgets.vcxproj.filters
@@ -30,9 +30,6 @@
   <ItemGroup>
     <ClInclude Include="WidgetsAPI.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="AActionManager.h">
-      <Filter>Action</Filter>
-    </ClInclude>
     <ClInclude Include="AToolkit.h">
       <Filter>Utils</Filter>
     </ClInclude>
@@ -64,6 +61,9 @@
       <Filter>MenuBar</Filter>
     </QtMoc>
     <QtMoc Include="AAction.h">
+      <Filter>Action</Filter>
+    </QtMoc>
+    <QtMoc Include="AActionManager.h">
       <Filter>Action</Filter>
     </QtMoc>
   </ItemGroup>
