--- a/Aproch/Aproch.vcxproj.filters
+++ b/Aproch/Aproch.vcxproj.filters
@@ -18,6 +18,11 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+      <ParseFiles>true</ParseFiles>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="Aproch.qrc">
@@ -34,6 +39,9 @@
     <ClCompile Include="AMainWindow.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="AAprochWidget.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -42,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="AMainWindow.h">
+      <Filter>Source</Filter>
+    </QtMoc>
+    <QtMoc Include="AAprochWidget.h">
       <Filter>Source</Filter>
     </QtMoc>
   </ItemGroup>
